--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding/conv.py=utf-8
+encoding/distinct.py=utf-8
 encoding/save_to_file_raw.py=utf-8
 encoding/weibo_pkg.py=utf-8
